fix text-align in lOGIN Field

--- a/src/components/login.css
+++ b/src/components/login.css
@@ -108,7 +108,6 @@
   }
 
   .form-control {
-    padding-bottom: 20px;
     width: 220px;
     height: 30px;
     background-color: aquamarine;
